Squashing TGR-567: Proxy: Möglichkeit die gefilterten Trafficdaten zu speichern